fixed bugs on mobile

--- a/css/about.css
+++ b/css/about.css
@@ -216,12 +216,20 @@ nav li a:hover {
 }
 .aboutMe {
   text-align:center;
-  font-size: 3.1em;
-  padding: 3em 1.2em 1.7em 1.2em;
+  font-size: 2em;
+  padding: 3.8em 1.2em 1.7em 1.2em;
   color: #000;
   background-color: #F5F5F5;
   transition: 1s all ease;
 }
+
+@media screen and (min-width: 400px) {
+    .aboutMe{
+      font-size: 3.1em;
+      padding: 3em 1.2em 1.7em 1.2em;
+    }
+}
+
 @media screen and (min-width: 661px) {
   .aboutMe {
     font-size: 5em;
